modified favicon,title,map,images of products,fixed media queries,aboutusimage alignment

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap");
+html, body {
+  width: auto!important;
+   overflow-x: hidden!important
+  } 
 
 * {
   margin: 0;
@@ -134,12 +138,11 @@ main {
   width: 100%;
   color: white;
   font-family: "Montserrat", sans-serif;
+  background-position: center center; 
+  background-attachment: fixed; 
+  background-repeat: no-repeat; background-size: cover; 
+ 
 }
-
-.wallpaper {
-  width: 100%;
-}
-
 .firstText {
   position: absolute;
   margin-top: 30px;
@@ -186,7 +189,7 @@ main {
 }
 .img-item img {
   width: 300px;
-  height: 300px;
+  height: 270px;
   padding: 15px;
   transform-origin: 30% 45%;
   transition: transform 5s, filter 3s ease-in-out;
@@ -211,12 +214,12 @@ main {
   width: 70%;
 }
 
-#Visit-Us {
+#Visit-Us,#Services {
   margin: 0 auto;
   padding-top: 50px;
 }
 #Visit-Us h3,
-#About-Us h3 {
+#About-Us h3, #Services h3 {
   font-size: 30px;
   text-shadow: 2px 2px #d07f8a;
   padding-bottom: 20px;
@@ -225,13 +228,7 @@ main {
 div.contact-container {
   display: flex;
 }
-.bannerarea {
-    background-position: center center; 
-    background-attachment: fixed; 
-    background-repeat: no-repeat; background-size: cover; 
-   
 
-}
 .map {
   flex-basis: 70%;
   flex-shrink: 0;
@@ -246,6 +243,7 @@ div.contact-container {
 }
 .contact-section {
   width: 25%;
+  margin: 15px;
   padding-left: 20px;
   display: flex;
 }
@@ -289,10 +287,11 @@ a :hover {
   border: 1px Solid;
   box-shadow: 10px 10px rgb(133, 4, 4);
   padding: 1px;
-  width: 97%;
+  width: 90%;
   margin-left: 40px;
   margin-top: 20px;
 }
+
 
 .footer span {
   padding: 5px;
@@ -314,12 +313,40 @@ a :hover {
   div.firstText {
     font-size: 20px;
   }
+  .aboutusImage {
+    border-radius: 2%;
+    border: 1px Solid;
+    box-shadow: 10px 10px rgb(133, 4, 4);
+    padding: 1px;
+    width: 90%;
+    margin-left: 20px;
+    margin-top: 20px;
+    height: 100%;
+  }
+  
+    .map-section {
+      width: 100%;
+      padding-left: 5px;
+      padding-right: 5px;
+      display: flex;
+  }
+  .contact-section {
+    width: 35%;
+    margin: 15px;
+    padding-left: 20px;
+  }
+  .contact-info p {
+    padding-top: 10px;
+    padding-left: 15px;
+    font-size: 14px;
+  }
 }
 
 @media screen and (max-width: 580px) {
   div.firstText {
     font-size: 20px;
   }
+
 }
 
 @media screen and (max-width: 650px) {
@@ -331,6 +358,19 @@ a :hover {
   .firstText span {
     font-size: 20px;
   }
+  .contact-section {
+    width: 25%;
+    margin: 15px;
+    padding-left: 20px;
+   
+  }
+  
+  .map-section {
+    width: 100%;
+    padding-left: 5px;
+    padding-right: 5px;
+    display: flex;
+}
 }
 
 @media screen and (max-width: 1050px) {
@@ -341,6 +381,18 @@ a :hover {
     color: black;
     margin-right: 4rem;
   }
+  .contact-section {
+    width: 35%;
+    margin: 15px;
+    padding-left: 20px;
+  }
+  
+  .map-section {
+    width: 100%;
+    padding-left: 5px;
+    padding-right: 5px;
+    display: flex;
+}
 }
 
 @media (min-width: 880px) {
@@ -348,10 +400,14 @@ a :hover {
     padding-right: 2rem;
     padding-left: 2rem;
   }
+  
 }
 
 @media screen and (max-width: 900px) {
   div.contact-container,.images-content {
     flex-direction: column;
+   
   }
+  
+ 
 }
